# sift-validator

./: .gitignore  LICENSE  README.md  SUMMARY.md  optional_fields_test.py  pyproject.toml  sandbox.py  summary.md  tox.ini
.github/workflows/: test.yml
deployment/: framework-integration.md
docs/: .gitbook.yaml  README.md  SUMMARY.md  advanced-validation.md  async-validation.md  basic-validation.md  framework-integration.md  installation.md  integration.md  openapi.md  pydantic.md  quickstart.md
docs/deployment/: integration.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: advanced-validation.md  basic-validation.md  openapi.md  pydantic.md
examples/: README.md  async_validation.py  basic_validation.py  complex_schemas.py  openapi_generation.py
guides/: async-validation.md
sift/: README.md  __init__.py  pydantic_converter.py
sift/openapi/: __init__.py  generator.py  schema.py
sift/schemas/: __init__.py
sift/tests/: conftest.py
sift/tests/validators/: test_primitives.py
sift/validators/: __init__.py  base.py  collections.py  email_validator.py  objects.py  primitives.py
tests/: conftest.py  test_base.py
tests/validators/: test_collections.py  test_objects.py  test_primitives.py
voltar/: __init__.py  pydantic_converter.py  pyproject.toml
voltar/openapi/: __init__.py  generator.py  schema.py
voltar/schemas/: __init__.py
voltar/validators/: __init__.py  base.py  collections.py  email_validator.py  objects.py  primitives.py
