[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sift"
version = "0.1.0"
description = "Sift Validator is a lightweight and expressive Python library for defining, parsing, and validating data structures with ease. Designed for clarity, speed, and full control."
authors = ["Chidebele Dunamis <techwithdunamix@example.com>"]
license = " BSD-3-Clause"
homepage = "https://github.com/nexios-labs/sift-validator"
repository = "https://github.com/nexios-labs/sift-validator"
documentation = "http://nexios-labs.gitbook.io/sift-validator"
readme = "readme.md"
keywords = [
    "ASGI",
    "backend",
    "framework",
    "web",
    "Python",
    "async",
    "asynchronous",
    "fastapi",
    "web server",
    "API",
    "scalable",
    "real-time",
    "concurrent",
    "HTTP",
    "websocket",
    "Nexios",
    "Sift",
    "validation"
]


[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_scope = "function"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
