[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "voltar"
version = "0.1.0"
description = "Voltar  Validator is a lightweight and expressive Python library for defining, parsing, and validating data structures with ease. Designed for clarity, speed, and full control."
authors = ["Chidebele Dunamis <techwithdunamix@example.com>"]
license = " BSD-3-Clause"
homepage = "https://github.com/nexios-labs/voltar"
repository = "https://github.com/nexios-labs/voltar"
documentation = "http://nexios-labs.gitbook.io/voltar"
readme = "README.md"
keywords = [
    "ASGI",
    "backend",
    "framework",
    "web",
    "Python",
    "async",
    "asynchronous",
    "fastapi",
    "web server",
    "API",
    "scalable",
    "real-time",
    "concurrent",
    "HTTP",
    "websocket",
    "Nexios",
    "Voltar ",
    "validation"
]

[tool.poetry.dependencies]
python = ">=3.9"
[tool.poetry.group.dev.dependencies]
python = ">=3.9"
pytest = "~=8.3.4"
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_scope = "function"

